fixed styles in trash component template

--- a/frontend/components/trash/trash-pug.component.pug
+++ b/frontend/components/trash/trash-pug.component.pug
@@ -1,4 +1,3 @@
-
 .trash-container
     h1 Trash
     hr.trash-line
@@ -24,42 +23,42 @@
 
             li keyword =
             input.trash-input(type="text")
-        .trash-items
-            .row
-                div.data-title
-                    span Message
-                div.data-desc
-                    span message title
-                div.data-button
-                    input.trash-control(type="image" src="/img/document.svg")
+    .trash-items
+        .row
+            div.data-title
+                span Message
+            div.data-desc
+                span message title
+            div.data-button
+                i(class="data-button fa fa-plus-circle" aria-hidden="true")
 
-                div.data-title
-                    span Event
-                div.data-desc
-                    span event title
-                div.data-button
-                    input.trash-control(type="image" src="/img/document.svg")
+            div.data-title
+                span Event
+            div.data-desc
+                span event title
+            div.data-button
+                i(class="data-button fa fa-plus-circle" aria-hidden="true")
 
-                div.data-title
-                    span Check-in
-                div.data-desc
-                    span check-in title
-                div.data-button
-                    input.trash-control(type="image" src="/img/document.svg")
+            div.data-title
+                span Check-in
+            div.data-desc
+                span check-in title
+            div.data-button
+                i(class="data-button fa fa-plus-circle" aria-hidden="true")
 
-                div.data-title
-                    span Task
-                div.data-desc
-                    span task title
-                div.data-button
-                    input.trash-control(type="image" src="/img/document.svg")
+            div.data-title
+                span Task
+            div.data-desc
+                span task title
+            div.data-button
+                i(class="data-button fa fa-plus-circle" aria-hidden="true")
 
-                div.data-title
-                    span Draft
-                div.data-desc
-                    span draft title
-                div.data-button
-                    input.trash-control(type="image" src="/img/document.svg")
+            div.data-title
+                span Draft
+            div.data-desc
+                span draft title
+            div.data-button
+                i(class="data-button fa fa-plus-circle" aria-hidden="true")
 
 
 
