--- a/frontend/components/trash/trashStyles.styl
+++ b/frontend/components/trash/trashStyles.styl
@@ -1,26 +1,20 @@
-body{
-	font-family:Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-.trash-container{
-	margin: 0 auto;
-	min-width: 940px;
-}
 .trash-container h1{
 	text-align: center;
 	font-size: 50px;
 }
 .trash-menu{
-	overflow: hidden;
-	padding 0;
+	padding: inherit;
+	display: block;
+	width: 830px;
+	margin: 15px auto;
 }
-
 .trash-menu li{
 	display: inline-block;
 	padding: 5px 10px 5px 10px;
 	border-left: 1px solid black;
 	height: 15px;
 	line-height: 15px;
-	font-size: 25px;
+	font-size: 20px;
 }
 .trash-menu li:nth-child(2){
 	border: none;
@@ -35,11 +29,10 @@ body{
 	text-decoration: none;
 	color: #ad303f;
 }
-
 .trash-menu-container{
-	width: 80%;
-	padding-left: 10%;
-	padding-right 10%;
+	width: 90%;
+	padding-left: 5%;
+	padding-right 5%;
 }
 .trash-items{
 	overflow: hidden;
@@ -58,35 +51,30 @@ body{
 }
 .trash-line{
 	width: 35%
-}
-.row{
-
+	margin: 0 auto 0 auto;
 }
 .row div{
 	display: inline-block;
 	float: left;
-	font-size: 25px;
-
+	font-size: 20px;
 }
 .data-title{
 	width: 30%;
 	padding-top: 15px;
 	padding-bottom 15px;
+	padding-right 25px;
 }
 .data-desc{
-	width: 60%;
+	width: 50%;
 	padding-top: 15px;
 	padding-bottom 15px;
-
+	padding-right 25px;
 }
 .data-button{
-	width: 9%;
 	text-align: right;
-	padding: 10px 0 3px;
-
+	font-size: 35px !important;
+	position: relative;
+	top: 5px;
 }
 
-.trash-control{
-	width: 40px;
-}
 
