made event component and event component list separation

--- a/frontend/components/menu/menu-pug.component.pug
+++ b/frontend/components/menu/menu-pug.component.pug
@@ -2,38 +2,38 @@ aside#aside
     nav.side-menu
         ul
             li
-                a(ng-link='[\'MsgBoard\']')
+                a(ng-link='["MsgBoard"]')
                     i.fa.fa-home.fa-2x
                     span.nav-text Home
             li
-                a(ng-link='[\'MsgBoard\']')
+                a(ng-link='["MsgBoard"]')
                     i.fa.fa-television.fa-2x
                     span.nav-text Message Board
             li
-                a(ng-link='[\'Checkins\']')
+                a(ng-link='["Checkins"]')
                     i.fa.fa-calendar-check-o.fa-2x
                     span.nav-text Check-ins
             li
-                a(ng-link='[\'Tasks\']')
+                a(ng-link='["Tasks"]')
                     i.fa.fa-tasks.fa-2x
                     span.nav-text Tasks
             li
-                a(ng-link='[\'Events\']')
+                a(ng-link='["Events"]')
                     i.fa.fa-calendar.fa-2x
                     span.nav-text Events
             li
-                a(ng-link='[\'Reports\']')
+                a(ng-link='["Reports"]')
                     i.fa.fa-area-chart.fa-2x
                     span.nav-text Reports
             li
-                a(ng-link='[\'Drafts\']')
+                a(ng-link='["Drafts"]')
                     i.fa.fa-pencil-square-o.fa-2x
                     span.nav-text Drafts
             li
-                a(ng-link='[\'Trash\']')
+                a(ng-link='["Trash"]')
                     i.fa.fa-trash.fa-2x
                     span.nav-text Trash
             li
-                a(ng-link='[\'Project\']')
+                a(ng-link='["Project"]')
                     i.fa.fa-cogs.fa-2x
                     span.nav-text Settings
