--- a/frontend/components/comments/comments.template.pug
+++ b/frontend/components/comments/comments.template.pug
@@ -1,1 +1,44 @@
-p Hello From Comments
+.comments-wrapper
+    section.row.center-xs
+        section.col-xs-8.comments-holder
+          section.row.comments-header
+            span.col-xs-10 Comments
+            |                     
+            .middle-xs.col-xs-2.fa.fa-close.button
+          |                 
+          .row.comments-body
+            ul.col-xs-12
+              li.row
+                .col-xs-1.user-icon.fa.fa-user
+                |                         
+                .col-xs-9
+                  .row
+                    span.col-xs-12.user-name UserName
+                  |                            
+                  .row
+                    p.col-xs-12.comment
+                      | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo sed distinctio quaerat rerum autem quam veniam beatae id necessitatibus voluptates aut repellendus, dolore, nesciunt ex doloremque sint minima, recusandae odio!
+                |                         
+                span.col-xs-2.comment-date Today 10:45
+              |                     
+              li.row
+                .col-xs-1.user-icon.fa.fa-user
+                |                         
+                .col-xs-9
+                  .row
+                    span.col-xs-12.user-name UserName
+                  |                            
+                  .row
+                    p.col-xs-12.comment
+                      | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo sed distinctio quaerat rerum autem quam veniam beatae id necessitatibus voluptates aut repellendus, dolore, nesciunt ex doloremque sint minima, recusandae odio!
+                |                         
+                span.col-xs-2.comment-date Today 10:45
+        
+          section.row.comments-tools
+            section.col-xs-12
+              section.row.message-holder
+                span.attachment.button.col-xs-2.fa-paperclip.fa.col-xs-offset-10
+                textarea.col-xs-12.user-message
+              |                         
+              section.row
+                section.button.col-xs-4.col-xs-offset-4 Comment
