--- a/frontend/components/comments/commentsStyle.styl
+++ b/frontend/components/comments/commentsStyle.styl
@@ -1,3 +1,47 @@
-p
-    color: red
-    
+.comments-wrapper
+    width 100%
+    padding 1%
+    .row
+        padding 0
+        margin 0
+   .comments-holder
+        padding 1%
+        border 1px solid #01c6c6
+        border-radius 10%
+        .comments-header 
+            border-bottom 1px solid grey
+            padding 1%
+            span
+                text-align left
+                width 100%
+                display inline-block
+                font-weight bold
+                font-size 25px
+        .comments-tools
+            width 100%
+        .user-name
+            font-weight bold
+            color darkgray
+            font-size 20px
+            text-align left
+        .user-icon
+            font-size 20px
+        .comment 
+            font-size 18px
+            text-align justify
+        .comment-date 
+            font-size 15px
+            color #01c6c6
+        .user-message 
+            height 100px
+            font-size 18px
+        .attachment
+            font-size 20px
+        .button
+            margin-top  1%
+            margin-bottom 1%
+            border-radius 20%
+            background-color greenyellow
+            padding 1%
+            font-weight bold
+            font-size 25px
