--- a/frontend/components/menu/menu-pug.component.pug
+++ b/frontend/components/menu/menu-pug.component.pug
@@ -2,7 +2,7 @@ aside#aside
     nav.side-menu
         ul
             li
-                a(ng-link='["MsgBoard"]')
+                a(ng-link='["MainPage"]')
                     i.fa.fa-home.fa-2x
                     span.nav-text Home
             li
@@ -21,10 +21,10 @@ aside#aside
                 a(ng-link='["Events"]')
                     i.fa.fa-calendar.fa-2x
                     span.nav-text Events
-            li
-                a(ng-link='["Reports"]')
-                    i.fa.fa-area-chart.fa-2x
-                    span.nav-text Reports
+            //- li
+            //-     a(ng-link='["Reports"]')
+            //-         i.fa.fa-area-chart.fa-2x
+            //-         span.nav-text Reports
             li
                 a(ng-link='["Drafts"]')
                     i.fa.fa-pencil-square-o.fa-2x
