change style for files.component

--- a/frontend/components/files/files.styl
+++ b/frontend/components/files/files.styl
@@ -1,5 +1,5 @@
 .files-wrapper
-    width 40%
+    width 35%
     border 1px solid #7986CB
     border-radius 10px
     position absolute
@@ -15,10 +15,12 @@
             background-color #EF6C00
             margin-left 0
         img
-            margin-left 80%
+            margin-left 60%
             width 5%
     .content
         ul
+            width: 100%
+            margin-left: 10%
             li
                 margin-top 4%
                 margin-bottom 4%
@@ -38,4 +40,4 @@
         width 26%
         font-size 1.6em
         margin-bottom 20px
-        background-color #C8E6C9
+        background-color #91bd4c
