add side padding for content, header imitation, menu 'top' update Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/menu/menuStyles.styl
+++ b/frontend/components/menu/menuStyles.styl
@@ -13,6 +13,7 @@
   position: absolute;
   left: 0;
   width: 60px;
+  top: 60px
   overflow: hidden;
   -webkit-transition: width 0.05s linear;
   transition: width 0.05s linear;
