--- a/frontend/components/menu/menuStyles.styl
+++ b/frontend/components/menu/menuStyles.styl
@@ -12,6 +12,7 @@
   background: #fbfbfb;
   position: absolute;
   left: 0;
+  margin-top 70px;
   width: 60px;
   overflow: hidden;
   -webkit-transition: width 0.05s linear;
