--- a/frontend/components/events/eventsStyles.styl
+++ b/frontend/components/events/eventsStyles.styl
@@ -1,7 +1,8 @@
 .events-wrapper
     width 75%
     margin auto
-    //background-color gray
+    color: #616161
+
     h1
         //margin-top 20px
         //margin-bottom 10px
@@ -16,6 +17,14 @@
         font-size 16px
         margin 4px 2px
         cursor pointer
+
+.events-blue-gray
+    color: #7986CB
+.events-icons
+    .fa
+        width 45px
+        height 17px
+        margin-top 2px    
 
 .events-header-container
     list-style none
@@ -37,7 +46,7 @@
 
 .choose-event-container
     //width 90%
-    margin-top: 10px
+    //margin-top: 10px
     display flex
     justify-content center
     align-items center
@@ -55,7 +64,10 @@
     text-align center
 
 .events
-    margin-top 10px
+    margin-top 15px
+    padding 10px
+    border-radius 10px
+    background-color whitesmoke
 
 .events-header
     width 100%
