--- a/frontend/components/notFound/404-pug.component.pug
+++ b/frontend/components/notFound/404-pug.component.pug
@@ -1,16 +1,7 @@
-html
-    head
-        title "Not found"
-        link(href='https://fonts.googleapis.com/css?family=Titillium+Web:900', rel='stylesheet', type='text/css')
-    body
-        div(id="block404")
-            img(src="./img/404.png")
-            h2  Not found page
-            p
-                | click 
-                a(href='/#/mainpage') here
-                |  to redirect on main page
-                
-            
-        
-    
+div(id="block404")
+    img(src="./img/404.png")
+    h2  Not found page
+    p
+        | click 
+        a(href='/#/') here
+        |  to redirect on main page
