--- a/frontend/components/notFound/notFound.styl
+++ b/frontend/components/notFound/notFound.styl
@@ -2,7 +2,7 @@
     width 800px
     margin 0 auto
     text-align center
-    font-family "Titillium Web"
+    font-family: 'Titillium Web', sans-serif;
 #block404 img
     margin 0 auto
     
