--- a/frontend/components/comments/commentsStyle.css
+++ b/frontend/components/comments/commentsStyle.css
@@ -8,39 +8,47 @@
 }
 .comments-holder {
   padding: 1%;
-  border: 1px solid #01c6c6;
-  border-radius: 10%;
+  border: 1px solid #adadad;
+  border-radius: 10px;
+  background-color: #f5f5f5;
+  box-shadow: 0px 5px 20px 2px #808080;
 }
 .comments-holder .comments-header {
   border-bottom: 1px solid #808080;
   padding: 1%;
 }
 .comments-holder .comments-header span {
+  font-family: "Montserrat";
   text-align: left;
   width: 100%;
   display: inline-block;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 30px;
 }
 .comments-holder .comments-tools {
   width: 100%;
 }
 .comments-holder .user-name {
   font-weight: bold;
-  color: #a9a9a9;
-  font-size: 20px;
+  font-family: "Montserrat";
+  color: #212121;
+  font-size: 25px;
   text-align: left;
 }
 .comments-holder .user-icon {
   font-size: 20px;
 }
 .comments-holder .comment {
-  font-size: 18px;
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-size: 23px;
   text-align: justify;
 }
 .comments-holder .comment-date {
-  font-size: 15px;
-  color: #01c6c6;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-weight: bold;
+  color: #f2992e;
 }
 .comments-holder .user-message {
   height: 100px;
@@ -52,9 +60,14 @@
 .comments-holder .button {
   margin-top: 1%;
   margin-bottom: 1%;
-  border-radius: 20%;
-  background-color: #adff2f;
+  border-radius: 5px;
+  background-color: #1d8dbf;
+  color: #fff;
   padding: 1%;
   font-weight: bold;
   font-size: 25px;
+  transition: 0.2s;
+}
+.comments-holder .button:hover {
+  box-shadow: 0px 0px 0px 1px #fff, 0px 0px 0px 4px #1d8dbf;
 }
