--- a/frontend/components/menu/menuStyles.css
+++ b/frontend/components/menu/menuStyles.css
@@ -9,9 +9,9 @@
   font-size: 20px;
 }
 .side-menu {
-  border-top-right-radius : 10px;
-  border-bottom-right-radius : 10px;
-  background-color #fbfbfb;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: #fbfbfb;
   position: absolute;
   left: 0;
   width: 60px;
@@ -29,14 +29,14 @@
   margin: 1px 0;
 }
 .side-menu li {
-    transition 0.2s;
-    overflow hidden;
+  transition: 0.2s;
+  overflow: hidden;
   position: relative;
   display: block;
   width: 250px;
 }
 .side-menu li > a {
-    overflow hidden;
+  overflow: hidden;
   position: relative;
   display: table;
   border-collapse: collapse;
