Update header template

--- a/frontend/components/tasks/tasksTemplate.pug
+++ b/frontend/components/tasks/tasksTemplate.pug
@@ -1,6 +1,11 @@
 .tasks-container
-    h1 Tasks  
-    button.tasks-add-taskBut() Set up new task
+    div.row
+        div.col-xs-offset-4.col-xs-4
+            div.box.tasks-box-center
+                h1 Tasks
+        div.col-xs-4
+            div.box.tasks-pos-relative
+                button.tasks-add-taskBut() Set up new task
     hr.tasks-line  
     .tasks-menu-container
             ul.tasks-menu
