--- a/frontend/components/tasks/tasksStyles.styl
+++ b/frontend/components/tasks/tasksStyles.styl
@@ -11,6 +11,13 @@
 	padding-left: 5%;
 	padding-right 5%;
 
+.tasks-box-center
+	width: 100%
+
+.tasks-pos-relative
+	width: 100%
+	height: 100%
+	position: relative
 
 .tasks-input
 	width: 70px;
@@ -52,10 +59,11 @@
 	color: #ad303f;
 
 .tasks-add-taskBut
-	float: right;
-	margin-right: 7%;
+	margin-left: 15%;
+	position: absolute
+	bottom: 0
 	background-color rgb(70, 205, 30)
-	padding 0.5%
+	padding 2%
 	border-radius 10px
 
 
