--- a/frontend/components/editMessage/editMessage.pug
+++ b/frontend/components/editMessage/editMessage.pug
@@ -2,14 +2,14 @@ section.post-message-wrapper
   header
     h2
       | Edit a message
-      img(align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
+      img(ng-link='["MsgBoard"]', align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
     hr
   section.input-block
     section.img-block
       img(src='https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_save_48px-128.png', alt='save')
       br
       img(src='https://cdn2.iconfinder.com/data/icons/files-folders-3/24/files-folders-48-128.png', alt='share')
-    textarea(name='', id='', cols='30', rows='10')  
+    textarea(name='', id='', cols='30', rows='10')  Examine she brother prudent add day ham. Far stairs now coming bed oppose hunted become his. You zealously departure had procuring suspicion. Books whose front would purse if be do decay. Quitting you way formerly disposed perceive ladyship are. Common turned boy direct and yet. Its had resolving otherwise she contented therefore. Afford relied warmth out sir hearts sister use garden. Men day warmth formed admire former simple. Humanity declared vicinity continue supplied no an. He hastened am no property exercise of. Dissimilar comparison no terminated devonshire no literature on. Say most yet head room such just easy.
     .text-editor
       | TEXT EDITOR
     form#uploadForm(action='/postMessage', method='post', enctype='multipart/form-data')
