--- a/frontend/components/postMessage/postMessage.pug
+++ b/frontend/components/postMessage/postMessage.pug
@@ -2,7 +2,7 @@ section.post-message-wrapper
   header
     h2
       | Post a message
-      img(align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
+      img(ng-link='["MsgBoard"]', align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
     hr
   section.input-block
     section.img-block
