--- a/frontend/components/tasks/tasksStyles.styl
+++ b/frontend/components/tasks/tasksStyles.styl
@@ -66,4 +66,14 @@
 	padding 2%
 	border-radius 10px
 
+.tasks-main-container
+	width: 80%
+	margin: 50px auto
+
+.tasks-row-margin-top
+	margin-top: 20px
+
+.tasks-align-right
+	text-aligh: right
+
 
