--- a/frontend/components/tasks/tasksTemplate.pug
+++ b/frontend/components/tasks/tasksTemplate.pug
@@ -23,6 +23,35 @@
 
                 li keyword =
                 input.tasks-input(type="text")
+    .tasks-main-container
+
+        div.row.tasks-row-margin-top
+            div.col-xs-1 4/7 |
+            div.col-xs-4 Set up external auth Server
+            div.col-xs-4.tasks-align-right expires in: 36 hours
+            div.col-xs-1.tasks-align-right  
+                i.fa.fa-arrow-down.fa-2
+
+        div.row.tasks-row-margin-top
+            div.col-xs-1 2/4 |
+            div.col-xs-4 Set up infrastructure for "checkin"
+            div.col-xs-4.tasks-align-right expires in: 72 hours
+            div.col-xs-1.tasks-align-right  
+                i.fa.fa-arrow-down.fa-2
+
+        div.row.tasks-row-margin-top
+            div.col-xs-1 1/6 |
+            div.col-xs-4 Set up infrastructure for "task"
+            div.col-xs-4.tasks-align-right expires in: 24 hours
+            div.col-xs-1.tasks-align-right 
+                 i.fa.fa-arrow-down.fa-2
+
+        div.row.tasks-row-margin-top
+            div.col-xs-1 3/8 |
+            div.col-xs-4 Create glossary
+            div.col-xs-4.tasks-align-right expires in: 12 hours
+            div.col-xs-1.tasks-align-right  
+                i.fa.fa-arrow-down.fa-2
 
 //div.row.arround-xs
    // div.col.xs-4
