change trash styles

--- a/frontend/components/trash/trash-pug.component.pug
+++ b/frontend/components/trash/trash-pug.component.pug
@@ -1,6 +1,6 @@
 .trash-container
     h1 Trash
-    hr.trash-line
+    hr(color="black").trash-line
     .trash-menu-container
         ul.trash-menu
             li filter by:
@@ -24,41 +24,41 @@
             li keyword =
             input.trash-input(type="text")
     .trash-items
-        .row
+        .trash-data
             div.data-title
                 span Message
             div.data-desc
                 span message title
-            div.data-button
-                i(class="data-button fa fa-plus-circle" aria-hidden="true")
+            div.trash-add-button
+                i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
             div.data-title
                 span Event
             div.data-desc
                 span event title
-            div.data-button
-                i(class="data-button fa fa-plus-circle" aria-hidden="true")
+            div.trash-add-button
+                i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
             div.data-title
                 span Check-in
             div.data-desc
                 span check-in title
-            div.data-button
-                i(class="data-button fa fa-plus-circle" aria-hidden="true")
+            div.trash-add-button
+                i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
             div.data-title
                 span Task
             div.data-desc
                 span task title
-            div.data-button
-                i(class="data-button fa fa-plus-circle" aria-hidden="true")
+            div.trash-add-button
+                i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
             div.data-title
                 span Draft
             div.data-desc
                 span draft title
-            div.data-button
-                i(class="data-button fa fa-plus-circle" aria-hidden="true")
+            div.dtrash-add-button
+                i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
 
 
