--- a/frontend/components/main/mainStyles.styl
+++ b/frontend/components/main/mainStyles.styl
@@ -1,179 +1,183 @@
-.mainpage
-	
-	padding 30px 20px
-
-	.lableRow
-		display flex
-		align-items: center
-		margin 10px 5% 50px
-		select
-			height 30px
-			margin-left 20px
-			border-radius 6px
-			height 37px
-			width 10%
-		.timelineLable
-			background-color #6B5E5E
-			color white
-			border-radius 15px
-			h2
-				margin 5px 5px
-			
-	.timeline
-		display block
-		position relative
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web:400,200')
+@keyframes slide1
+	0%
+		opacity 0
+	50%
+		left -100%
+		opacity 0
+	100%
+		left 0
+		opacity 1
+@keyframes slide2
+	0%
+		left 0
+	100%
+		left 100%
+@keyframes init
+	0%
+		opacity 0
+	100%
+		opacity 1
+.main_component
+	.timeline_block
 		width 80%
-		height 30px
-		margin 50px auto
-		border-left 2px solid black
-		border-right 2px solid black
-		&:after
-			content ''
-			border-top 2px solid black
-			height 0
-			width 110%
-			left -5%
-			position absolute
-			top 50%
-			z-index 0
-		#time1
-			position absolute
-			left -15px
-			bottom -30px
-		#time2
-			position absolute
-			right -15px
-			bottom -30px
-		.eventcircl
-			color white
-			background-color #6B5E5E
-			height 30px
-			line-height 30px
-			width 30px
-			text-align center
-			border 1px solid #6B5E5E
-			border-radius 15px
-			position absolute
-			z-index 30000
-			.count
-				color #E26A6A
-				position absolute
-				bottom -17px
-				right -5px
-		.deadline 
-			color #E26A6A
-			.time
-				color white
-				background-color #6B5E5E
-				position absolute
-				top -25px
-				height 20px
-				line-height 20px
-				padding 0 3px
-				border-radius 4px
-				left -5px
-		#tl1
-			left 10%
-		#tl2
-			left 17%
-		#tl3
-			left 54%
-		#tl4
-			left 83%
-		
-	.messagesreview
-		
+		margin 0 auto
+		background-color #C8E6C9
+		padding 20px
 		display flex
-		border 2px solid #6B5E5E
-		border-radius 20px
-		background linear-gradient( to right, #6B5E5E 20%, white 20%)
-		justify-content space-between
-		padding 10px
-		align-items center
-		margin 50px 5%
-		height 130px
-		img
-			width 35px
-			height 35px
-			border 1px solid black
-			border-radius 20px
-		.messname
-			float right
-			font-size 16px
-			line-height 35px
-			margin-right 5%
-			vertical-align baseline
-		.messtext 
-			text-align left
-			display block
-			line-height 15px
-			width 100%
-			max-height 45px
-			overflow hidden
-			text-overflow ellipsis
-			margin-top 4px
-		>div
-			height 130px
-			&:not(:last-child)
-				border-right 1px solid black
-			&:nth-child(1)
-				width 20%
-				border-right none
-			&:not(:nth-child(1))
-				width 17%
-		.messagelable
-			color white
-			font-size 24px
-			h3
-				line-height 130px
-				margin 0
-			
-		.time
-			color blue
-			margin-top 15px
-			font-size 12px
-				
-	
-		
-	.checkinsreview
-		display flex
-		border 2px solid #6B5E5E
-		border-radius 20px
-		background linear-gradient( to right, #6B5E5E 20%, white 20%)
-		justify-content space-between
-		padding 10px
-		align-items center
-		margin 50px 5% 0
-		height 130px
-		>div
+		align-items flex-end
+		.scale_block
 			position relative
-			height 130px
-			&:not(:last-child)
-				border-right 1px solid black
-			&:nth-child(1)
-				width 20%
-				border-right none
-			&:not(:nth-child(1))
-				width 17%
-			span
-				display block
-		.checkinslable
-			color white
-			font-size 24px
-			h3
-				line-height 130px
-				margin 0
-		.question
-			margin-bottom 30px
-		.repeattime
-			color #9E9E9E
-			font-size 12px
-			position absolute
-			top 50%
-		.answercount
-			position absolute
-			bottom 0
-			color #1565C0
-			font-size 14px
+			margin-top 10px
+			width 70%
+			display inline-block
+			margin-left 30px
+			.lable
+				font-family: 'Titillium Web', sans-serif
+				font-weight 200
+				display flex
+				align-items center
+				font-size 24px
+				.icon
+					height 60px
+					width 60px
+					background-color #EF6C00
+					i
+						font-size 36px
+						margin 12.5px 0
+				span
+					color white
+					background-color #616161
+					margin-left 15px
+					padding 2px 5px
+			.day_return
+				cursor pointer
+				display flex
+				align-items center
+				color #7986CB
+				font-family: 'Titillium Web', sans-serif
+				font-size 20px
+				position absolute
+				top 20%
+				i
+					font-size 36px
+					width 20px
+					color #7986CB
+			.scale
+				display flex
+				height 300px
+				align-items flex-end
+				margin-bottom 15px
+				.time_mark
+					font-family: 'Titillium Web', sans-serif
+					width 5px
+					margin-right 8px
+					height 25px
+					box-shadow 3px 0px 0px 0px #ffcc80
+					background-color #EF6C00
+					position relative
+					&:first-child
+						font-size 18px
+						height 50px
+						span
+							position absolute
+							left -30px
+							bottom -28px
+					&:last-child
+						font-size 18px
+						height 50px
+						span
+							position absolute
+							right -30px
+							bottom -28px
+					.mark_lable
+						font-size 12px
+						display block
+						background-color #7986CB
+						color white
+						position absolute
+						cursor pointer
+						width 70px
+						bottom 102%
+						left -32.5px
+						transition background 0.5s ease-out
+						span
+							display block
+							margin-left 3px
+						&:hover
+							background-color #616161
+					.deadline
+						background-color #543333
+					&:nth-child(7)
+						height 100px
+					&:nth-child(14)
+						height 60px
+					&:nth-child(27)
+						height 130px
+					&:nth-child(43)
+						height 180px
+					
+					
+					
 
-		
+
+				
+		.preview_block
+			width 25%
+			height 300px
+			background-color white
+			display inline-block
+			position relative
+			margin-bottom 15px
+			overflow hidden
+			animation init 1s
+			animation-fill-mode: forwards
+			input 
+				display none
+				&:checked + .timegap
+					left 0
+					animation slide1 1s
+					animation-fill-mode: forwards
+					
+			.timegap
+				width 100%
+				height 100%
+				display block
+				position absolute
+				background-color white
+				animation slide2 1s
+				animation-fill-mode forwards
+				*
+					margin 8px
+				.type
+					background-color #ffcc80
+					color #616161
+					text-align center
+					display block
+					width 90%
+					margin 0 auto
+					margin-bottom 3px
+					position relative
+					text-transform uppercase
+					font-size 14px
+					font-family: 'Titillium Web', sans-serif
+				.message_text
+					font-family sans-serif
+					color #616161
+					font-size 14px
+					display block
+					overflow hidden
+					text-overflow ellipsis
+					white-space nowrap
+					width 100%
+				.time
+					font-family sans-serif
+					color #7986CB
+					font-size 10px
+					display block
+					text-align right
+					position absolute
+					text-weight 800
+					right 0
+					top -3px
+				
