--- a/frontend/components/comments/comments.template.pug
+++ b/frontend/components/comments/comments.template.pug
@@ -2,9 +2,9 @@
     section.row.center-xs
         section.col-xs-8.comments-holder
           section.row.comments-header
-            span.col-xs-10 Comments
+            span.col-xs-11 Comments
             |                     
-            .middle-xs.col-xs-2.fa.fa-close.button
+            .middle-xs.col-xs-1.fa.fa-close.button
           |                 
           .row.comments-body
             ul.col-xs-12
@@ -37,8 +37,8 @@
           section.row.comments-tools
             section.col-xs-12
               section.row.message-holder
-                span.attachment.button.col-xs-2.fa-paperclip.fa.col-xs-offset-10
+                span.attachment.button.col-xs-1.fa-paperclip.fa.col-xs-offset-11
                 textarea.col-xs-12.user-message
               |                         
               section.row
-                section.button.col-xs-4.col-xs-offset-4 Comment
+                section.button.comment-button.col-xs-4.col-xs-offset-4 Comment
