--- a/frontend/components/comments/commentsStyle.css
+++ b/frontend/components/comments/commentsStyle.css
@@ -58,16 +58,23 @@
   font-size: 20px;
 }
 .comments-holder .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 1%;
   margin-bottom: 1%;
   border-radius: 5px;
   background-color: #1d8dbf;
   color: #fff;
   padding: 1%;
-  font-weight: bold;
-  font-size: 25px;
+  font-size: 30px;
+  height: 50px;
   transition: 0.2s;
+  cursor: pointer;
 }
 .comments-holder .button:hover {
   box-shadow: 0px 0px 0px 1px #fff, 0px 0px 0px 4px #1d8dbf;
+}
+.comments-holder .comment-button {
+  font-family: "Montserrat";
 }
