--- a/frontend/components/comments/commentsStyle.styl
+++ b/frontend/components/comments/commentsStyle.styl
@@ -47,14 +47,20 @@
         .attachment
             font-size 20px
         .button
+            display flex
+            justify-content center
+            align-items center
             margin-top  1%
             margin-bottom 1%
             border-radius 5px
             background-color #1d8dbf
             color white
             padding 1%
-            font-weight bold
-            font-size 25px
+            font-size 30px
+            height 50px
             transition 0.2s
+            cursor pointer
             &:hover
                 box-shadow 0px 0px 0px 1px white, 0px 0px 0px 4px #1d8dbf
+        .comment-button
+            font-family "Montserrat"
